# ClusterSetupAndConfigs

./: .github-default-branch  .gitignore  .uv.toml  BENCHMARK_RESULTS.md  CLAUDE.md  COMPILER_UPDATE_SUMMARY.md  DEFAULT_BRANCH_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  FIXES_2025_11_07.md  GCC_VERSION_FIX.md  PGAS_CONFIGURATION.md  QUICK_REFERENCE.md  README.md  REFACTORING_DOCUMENTATION.md  TESTING_SUMMARY.md  USAGE_EXAMPLES.md  WSL_FIREWALL_SETUP.md  cluster_config.yaml  cluster_setup.py  cluster_setup_backup.py  cluster_setup_modular_future.py  cluster_setup_ui.py  configure_cluster_pgas.py  configure_wsl_firewall.ps1  copilot-instructions.md  example_config.txt  install_openshmem_test.py  mpi_test.py  mpirun_cluster.sh  pyproject.toml  requirements.txt  run_all_benchmarks.sh  setup_slurm.py  setup_wsl_port_forwarding.ps1  test_cluster_setup.py  test_slurm_jobs.py
agents/: claude_agent.md  claude_builder_agent.md
cluster_modules/: COMPILER_UPDATE_SUMMARY.md  README.md  REFACTORING_CHANGELOG.md  __init__.py  benchmark_manager.py  benchmark_manager.py.backup  benchmark_runner.py  berkeley_upc_manager.py  cluster_cleanup.py  config_template_manager.py  core.py  homebrew_manager.py  installer_base.py  mpi_manager.py  mpi_network_config.py  multi_node_runner.py  network_manager.py  openmp_manager.py  openshmem_manager.py  pdsh_manager.py  pgas_config.py  pgas_manager.py  slurm_job_manager.py  slurm_manager.py  slurm_setup_helper.py  ssh_manager.py  sudo_manager.py
cluster_tools/: README.md  __init__.py  configure_pgas.py
docs/: TEST_RESULTS.md
templates/: README.md
(+66 files in other folders)
